# Impfdireinen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESEARCH.md  index.html  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  build_research_pdf.py
docs/img/: generate_figures.py
examples/: cpcv_demo.py  cross_sectional_demo.py  crypto_intraday_profile.py  crypto_realvol.py  enriched_factor_demo.py  factor_model_demo.py  feature_purge.py  github_data_scan.py  meta_labeling_demo.py  meta_stress_test.py  midcap_scan.py  paper_walk.py  phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py  phase6_demo.py  structural_decompose.py  structural_demo.py  structural_gmm.py  structural_mfe_xgb.py  structural_selectivity.py  structural_survivorship.py  structural_swing_rater.py  survivorship_stress.py
tests/: test_crypto.py  test_examples.py  test_execution.py  test_feature_purge.py  test_gmm.py  test_meta.py  test_ml.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_structure.py  test_validation.py
vpts/: __init__.py
vpts/backtest/: __init__.py  engine.py  models.py
vpts/dashboard/: __init__.py  app.py  charts.py
vpts/data/: __init__.py  crypto.py  fetcher.py
vpts/execution/: __init__.py  paper_trader.py
vpts/ml/: __init__.py  cross_sectional.py  factor_model.py  features.py  labeling.py  meta_model.py  models.py
vpts/profile/: __init__.py  calculator.py  models.py
vpts/regime/: __init__.py  indicators.py  patterns.py  quiet.py
vpts/scoring/: __init__.py  models.py  scorer.py
vpts/signals/: __init__.py  generator.py  models.py
vpts/structure/: __init__.py  analytics.py  dataset.py  gmm.py  models.py
(+3 files in other folders)
